添加 .gitignore 文件，更新 requirements.txt 以移除版本限制，新增 stltovoxel.py 文件

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-joblib==1.4.2
-matplotlib==3.7.5
-numpy==1.24.1
-opencv_python==4.10.0.84
-Pillow==11.0.0
-pyinstrument==5.0.0
-pyvista==0.44.1
-scipy==1.14.1
-tqdm==4.67.0
+joblib
+matplotlib
+numpy
+opencv_python
+Pillow
+pyinstrument
+pyvista
+scipy
+tqdm
